--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,36 @@
 asgiref==3.8.1
+astroid==2.15.8
 backports-datetime-fromisoformat==2.0.3
+black==25.1.0
+click==8.1.8
 Django==5.2
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 environs==14.1.1
+exceptiongroup==1.2.2
+flake8==6.1.0
+flake8-black==0.3.6
+flake8-django==1.4
+flake8-isort==6.1.2
+iniconfig==2.1.0
+isort==6.0.1
+lazy-object-proxy==1.11.0
 marshmallow==4.0.0
+mccabe==0.7.0
+mypy_extensions==1.1.0
+packaging==25.0
+pathspec==0.12.1
 pillow==11.2.1
+platformdirs==4.3.7
+pluggy==1.5.0
+psycopg2-binary==2.9.10
+pycodestyle==2.11.1
+pyflakes==3.1.0
 PyJWT==2.9.0
+pytest==8.3.5
+pytest-django==4.11.1
 python-dotenv==1.1.0
 sqlparse==0.5.3
+tomli==2.2.1
 typing_extensions==4.13.2
+wrapt==1.17.2
