--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,36 @@
+amqp==5.3.1
 asgiref==3.8.1
 astroid==2.15.8
+attrs==25.3.0
 backports-datetime-fromisoformat==2.0.3
+billiard==4.2.1
 black==25.1.0
+celery==5.5.2
 click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+coverage==7.8.0
 Django==5.2
+django-redis==5.4.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+drf-spectacular==0.28.0
 environs==14.1.1
 exceptiongroup==1.2.2
+factory_boy==3.3.3
+Faker==37.1.0
 flake8==6.1.0
 flake8-black==0.3.6
 flake8-django==1.4
 flake8-isort==6.1.2
+gunicorn==23.0.0
+inflection==0.5.1
 iniconfig==2.1.0
 isort==6.0.1
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+kombu==5.5.3
 lazy-object-proxy==1.11.0
 marshmallow==4.0.0
 mccabe==0.7.0
@@ -23,14 +40,27 @@ pathspec==0.12.1
 pillow==11.2.1
 platformdirs==4.3.7
 pluggy==1.5.0
+prompt_toolkit==3.0.51
 psycopg2-binary==2.9.10
 pycodestyle==2.11.1
 pyflakes==3.1.0
 PyJWT==2.9.0
 pytest==8.3.5
+pytest-cov==6.1.1
 pytest-django==4.11.1
+pytest-factoryboy==2.7.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+PyYAML==6.0.2
+redis==5.2.1
+referencing==0.36.2
+rpds-py==0.24.0
+six==1.17.0
 sqlparse==0.5.3
 tomli==2.2.1
 typing_extensions==4.13.2
+tzdata==2025.2
+uritemplate==4.1.1
+vine==5.1.0
+wcwidth==0.2.13
 wrapt==1.17.2
