--- a/.env.dist
+++ b/.env.dist
@@ -2,3 +2,17 @@ SECRET_KEY=your_secret_key
 DEBUG=True
 ALLOWED_HOSTS=127.0.0.1:8000,localhost:8000,localhost:3000,127.0.0.1:3000
 CORS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:8000,http://127.0.0.1:8000
+
+DB_USER=your_user
+DB_PASSWORD=your_pass
+DB_NAME=your_db
+DB_HOST=your_host
+DB_PORT=5432
+
+EMAIL_HOST=your_smtp_host
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=your_email
+EMAIL_HOST_PASSWORD=your_password
+DEFAULT_FROM_EMAIL=your_email
+SUPPORT_EMAIL=your_support_email
